--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,3 +6,4 @@ set(CMAKE_CXX_STANDARD 11)
 add_subdirectory(Chap5_ArrayList)
 add_subdirectory(Chap6_LinkedList)
 add_subdirectory(Chap7_Matrix)
+add_subdirectory(Chap8_Stack)
