--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,3 +9,4 @@ add_subdirectory(Chap7_Matrix)
 add_subdirectory(Chap8_Stack)
 add_subdirectory(Chap9_Queue)
 add_subdirectory(Chap10_SkipAndHashTable)
+add_subdirectory(Chap11_BinaryTree)
