--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,3 +10,4 @@ add_subdirectory(Chap8_Stack)
 add_subdirectory(Chap9_Queue)
 add_subdirectory(Chap10_SkipAndHashTable)
 add_subdirectory(Chap11_BinaryTree)
+add_subdirectory(Chap12_PriorityQueue)
