--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,3 +11,4 @@ add_subdirectory(Chap9_Queue)
 add_subdirectory(Chap10_SkipAndHashTable)
 add_subdirectory(Chap11_BinaryTree)
 add_subdirectory(Chap12_PriorityQueue)
+add_subdirectory(Chap13_TouranmentTree)
